--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+dataclasses==0.6
 Django==2.2
-django-mongodb-engine==0.6.0
-djangotoolbox==1.8.0
+djongo==1.2.32
 pymongo==3.8.0
 pytz==2019.1
-sqlparse==0.3.0
+sqlparse==0.2.4
